# eagle-eye-client

./: .gitignore  CMakeLists.txt  README.md
client/core/: corecontroller.cpp  corecontroller.h  defs.h  filesmanager.cpp  filesmanager.h  hash.cpp  hash.h  hashconfigmanager.cpp  hashconfigmanager.h  hashmanager.cpp  hashmanager.h  keychainmanager.cpp  keychainmanager.h  logger.cpp  logger.h  main.cpp  process.cpp  process.h  processmonitor.cpp  processmonitor.h  securitymonitor.cpp  securitymonitor.h  systemservice.cpp  systemservice.h  utils.cpp  utils.h
client/core/daemon/: daemonconnection.cpp  daemonconnection.h  daemonlocalserver.cpp  daemonlocalserver.h
docs/: integration.md
examples/simplegame/: CMakeLists.txt
examples/simplegame/source/: cheat.cpp  game.cpp  game_map.cpp  player.h
log_viewer/: CMakeLists.txt  icon.rc
log_viewer/source/: main.cpp
test_chamber/: CMakeLists.txt
test_chamber/source/: cheat.cpp  cheat.h  example_map.txt  game.cpp  game.h  game_map.cpp  game_map.h  gameconst.h  main.cpp  player.cpp  player.h
